
   * FTP server errors don't error in the error handling code.
     (Robert Collins, #161240)

   * It is clearer when a plugin cannot be loaded because of its name, and a
     suggestion for an acceptable name is given. (Daniel Watkins, #103023)

   * Make sure Repository.fetch(self) is properly a no-op for all
     Repository implementations. (John Arbash Meinel, #158333)

   * Obsolete packs are now cleaned up by pack and autopack operations.
     (Robert Collins, #153789)

   * Reconcile now shows progress bars. (Robert Collins, #159351)

   * ``RemoteBranch`` was not initializing ``self._revision_id_to_revno_map``
     properly. (John Arbash Meinel, #162486)

   * Removing an already-removed file reports the file does not exist. (Daniel
     Watkins, #152811)

   * Rename on Windows is able to change filename case.
     (Alexander Belchenko, #77740)

   * Stderr output via logging mechanism now goes through encoded wrapper
     and no more uses utf-8, but terminal encoding instead. So all unicode
     strings now should be readable in non-utf-8 terminal.
     (Alexander Belchenko, #54173)

   * The error message when ``move --after`` should be used makes how to do so
     clearer. (Daniel Watkins, #85237)

   * Unicode-safe output from ``bzr info``. The output will be encoded
     using the terminal encoding and unrepresentable characters will be
     replaced by '?'. (Lukáš Lalinský, #151844)

   * Wrap medusa ftp test server as an FTPServer feature.
     (Vincent Ladeuil, #157752)

   * Fix exception when ScopeReplacer is assigned to before any members have
     been retrieved.  (Aaron Bentley)

   * Fix exception when revisionspec contains merge revisons but log
     formatter doesn't support merge revisions. (Kent Gibson, #148908)

   * Return error instead of a traceback for ``bzr log -r0``.
     (Kent Gibson, #133751)

   * Working trees are no longer created when pushing into a local no-trees
     repo. (Daniel Watkins, #50582)

  API BREAKS:
